# s2_sdk_dart

./: CHANGELOG.md  README.md  flutter_rust_bridge.yaml  pubspec.yaml
.github/: FUNDING.yml
.github/workflows/: publish.yml
example/: README.md  pubspec.yaml
example/android/app/: build.gradle.kts
example/counter/: pubspec.yaml
example/counter/lib/: main.dart
example/counter/macos/Runner/: DebugProfile.entitlements  Release.entitlements
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/linux/: CMakeLists.txt
example/linux/runner/: my_application.cc
example/macos/Runner.xcodeproj/: project.pbxproj
example/video/: README.md  init.json  pubspec.yaml
example/video/lib/: main.dart
example/video/test/: widget_test.dart
example/video/web/: index.html
example/web/: index.html  manifest.json
example/windows/: CMakeLists.txt
example/windows/runner/: Runner.rc  main.cpp
hook/: build.dart
lib/: s2_sdk_dart.dart
lib/src/: access_tokens.dart  append_session.dart  basin.dart  basins.dart  client.dart  lib.dart  producer.dart  record.dart  stream.dart  streams.dart
lib/src/rust/: append_session.dart  basin.dart  basin.freezed.dart  client.dart  error.dart  frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart  lib.dart  producer.dart  stream.dart  types.dart  types.freezed.dart
rust/: Cargo.toml  rust-toolchain.toml
rust/src/: append_session.rs  basin.rs  client.rs  error.rs  frb_generated.rs  lib.rs  producer.rs  stream.rs  types.rs
(+28 files in other folders)
