[package]
name = "rust_lib_s2_sdk_dart"
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
anyhow = "1.0.102"
flutter_rust_bridge = { version = "=2.12.0" }
s2-sdk = "0.26.0"
time = "0.3.47"
tokio-stream = "0.1.18"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
